--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,7 @@ workflows:
     jobs:
       - build:
           context: org-global
+          filters:
+            branches:
+              only: 
+                - master
